--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "url": "git+https://github.com/Glazelf/SardineCollector.git"
   },
   "author": "Glaze",
-  "license": "",
+  "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/Glazelf/SardineCollector/issues"
   },
